--- a/index.html
+++ b/index.html
@@ -1,2 +1,59 @@
-helloooooii!!
-welcome to aswathy project
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wonderful Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+            color: #333;
+        }
+        header {
+            background-color: #007bff;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+        h1 {
+            margin: 0;
+            font-size: 2em;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 0 20px;
+        }
+        p {
+            line-height: 1.6;
+        }
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Welcome to My Wonderful Page!</h1>
+    </header>
+    <div class="container">
+        <p>This is a wonderful page designed with HTML and CSS. It's simple yet elegant!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget tortor sit amet magna fermentum suscipit non eget nulla. Nulla efficitur feugiat dui id lacinia. Suspendisse potenti.</p>
+        <p>Etiam consequat, eros eget consectetur vulputate, libero nulla semper sem, at consequat mi eros et est. Nulla ut bibendum eros, nec auctor quam. Proin vulputate risus quis ipsum vestibulum tempus.</p>
+        <p>Phasellus sed leo nec metus bibendum lacinia. Nulla facilisi. Vivamus dignissim dictum magna, eget convallis urna commodo ut. Quisque fringilla sollicitudin nulla, vitae aliquet mi dictum sit amet.</p>
+    </div>
+    <footer>
+        <p>&copy; 2024 Wonderful Page. All rights reserved.</p>
+    </footer>
+</body>
+</html>
+
