--- a/index.html
+++ b/index.html
@@ -1,59 +1,73 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wonderful Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-            color: #333;
-        }
-        header {
-            background-color: #007bff;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-        h1 {
-            margin: 0;
-            font-size: 2em;
-        }
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 0 20px;
-        }
-        p {
-            line-height: 1.6;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>Welcome to My Wonderful Page!</h1>
-    </header>
-    <div class="container">
-        <p>This is a wonderful page designed with HTML and CSS. It's simple yet elegant!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget tortor sit amet magna fermentum suscipit non eget nulla. Nulla efficitur feugiat dui id lacinia. Suspendisse potenti.</p>
-        <p>Etiam consequat, eros eget consectetur vulputate, libero nulla semper sem, at consequat mi eros et est. Nulla ut bibendum eros, nec auctor quam. Proin vulputate risus quis ipsum vestibulum tempus.</p>
-        <p>Phasellus sed leo nec metus bibendum lacinia. Nulla facilisi. Vivamus dignissim dictum magna, eget convallis urna commodo ut. Quisque fringilla sollicitudin nulla, vitae aliquet mi dictum sit amet.</p>
-    </div>
-    <footer>
-        <p>&copy; 2024 Wonderful Page. All rights reserved.</p>
-    </footer>
-</body>
-</html>
+<!-- Inspired by https://bert.house/en/-->
+<div class="center">
+  <h1>WELCOME</h1>
+  <div class="btn">Enter</div>
+</div>
+html {
+  background-color: #10151B;
+  background: url(https://static.pexels.com/photos/3797/black-and-white-sport-fight-boxer.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 
+body {
+  font-family: "Oswald", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+}
+
+h1 {
+  line-height: .95;
+  color: #66fcf1;
+  font-weight: 900;
+  font-size: 150px;
+  text-transform: uppercase;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  pointer-events: none;
+}
+
+.center {
+  position: absolute;
+  margin: auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 581px;
+  height: 50%;
+}
+
+.btn {
+  margin: 0 auto;
+  width: 170px;
+  height: 60px;
+  padding: 6px 0 0 3px;
+  border: 2px solid #66fcf1;
+  border-radius: 2px;
+  background: none;
+  font-size: 16px;
+  line-height: 54px;
+  color: #fff;
+  letter-spacing: .25em;
+  text-decoration: none;
+  font-weight: 600;
+  text-transform: uppercase;
+  vertical-align: middle;
+  text-align: center;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  -webkit-transition: background .4s, color .4s;
+  transition: background .4s, color .4s;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background: #66fcf1;
+  color: #10151B;
+}
