--- a/index.html
+++ b/index.html
@@ -1,73 +1,87 @@
-<!-- Inspired by https://bert.house/en/-->
-<div class="center">
-  <h1>WELCOME</h1>
-  <div class="btn">Enter</div>
-</div>
-html {
-  background-color: #10151B;
-  background: url(https://static.pexels.com/photos/3797/black-and-white-sport-fight-boxer.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome Page</title>
+    <style>
+        html {
+            background-color: #10151B;
+            background: url(https://static.pexels.com/photos/3797/black-and-white-sport-fight-boxer.jpg) no-repeat center center fixed;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
+        }
 
-body {
-  font-family: "Oswald", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  font-smoothing: antialiased;
-}
+        body {
+            font-family: "Oswald", sans-serif;
+            -webkit-font-smoothing: antialiased;
+            font-smoothing: antialiased;
+            margin: 0;
+            padding: 0;
+        }
 
-h1 {
-  line-height: .95;
-  color: #66fcf1;
-  font-weight: 900;
-  font-size: 150px;
-  text-transform: uppercase;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  pointer-events: none;
-}
+        h1 {
+            line-height: .95;
+            color: #66fcf1;
+            font-weight: 900;
+            font-size: 150px;
+            text-transform: uppercase;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            pointer-events: none;
+        }
 
-.center {
-  position: absolute;
-  margin: auto;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 581px;
-  height: 50%;
-}
+        .center {
+            position: absolute;
+            margin: auto;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width: 581px;
+            height: 50%;
+            text-align: center;
+        }
 
-.btn {
-  margin: 0 auto;
-  width: 170px;
-  height: 60px;
-  padding: 6px 0 0 3px;
-  border: 2px solid #66fcf1;
-  border-radius: 2px;
-  background: none;
-  font-size: 16px;
-  line-height: 54px;
-  color: #fff;
-  letter-spacing: .25em;
-  text-decoration: none;
-  font-weight: 600;
-  text-transform: uppercase;
-  vertical-align: middle;
-  text-align: center;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  -webkit-transition: background .4s, color .4s;
-  transition: background .4s, color .4s;
-  cursor: pointer;
-}
+        .btn {
+            margin: 0 auto;
+            width: 170px;
+            height: 60px;
+            padding: 6px 0 0 3px;
+            border: 2px solid #66fcf1;
+            border-radius: 2px;
+            background: none;
+            font-size: 16px;
+            line-height: 54px;
+            color: #fff;
+            letter-spacing: .25em;
+            text-decoration: none;
+            font-weight: 600;
+            text-transform: uppercase;
+            vertical-align: middle;
+            text-align: center;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            -webkit-transition: background .4s, color .4s;
+            transition: background .4s, color .4s;
+            cursor: pointer;
+        }
 
-.btn:hover {
-  background: #66fcf1;
-  color: #10151B;
-}
+        .btn:hover {
+            background: #66fcf1;
+            color: #10151B;
+        }
+    </style>
+</head>
+<body>
+    <div class="center">
+        <h1>WELCOME</h1>
+        <a href="#" class="btn">Enter</a>
+    </div>
+</body>
+</html>
