--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <body>
     <div class="center">
         <h1>WELCOME</h1>
-        <a href="#" class="btn">Enter</a>
+        <a href="#" class="btn">HAVE A GOOD DAY!!!</a>
     </div>
 </body>
 </html>
